--- a/google.ai/index.html
+++ b/google.ai/index.html
@@ -3,76 +3,34 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>声影共鸣 - 数字化视听实验海报</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>AI 灵感实验室</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700;900&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <script>
-      window.process = { env: { NODE_ENV: 'production' } };
-    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --bg: #fdfdfd;
-            --slate-900: #0f172a;
+        * { -webkit-tap-highlight-color: transparent; }
+        body { 
+          font-family: 'Inter', sans-serif;
+          background: #fcfcfd;
+          overflow: hidden;
+          -webkit-font-smoothing: antialiased;
         }
-        body {
-            font-family: 'Noto Sans SC', sans-serif;
-            background-color: var(--bg);
-            color: var(--slate-900);
-            scroll-behavior: smooth;
-            margin: 0;
-        }
-        .font-mono {
-            font-family: 'JetBrains Mono', monospace;
-        }
-        .bg-pattern {
-            background-image: radial-gradient(circle at 1px 1px, #cbd5e1 0.8px, transparent 0);
-            background-size: 16px 16px;
-        }
-        .title-stroke {
-            -webkit-text-stroke: 1.2px #0f172a;
-            color: transparent;
-            paint-order: stroke fill;
-        }
-        input[type=range] {
-            -webkit-appearance: none;
-            background: transparent;
-            cursor: pointer;
-        }
-        input[type=range]::-webkit-slider-runnable-track {
-            height: 2px;
-            background: #cbd5e1;
-        }
-        input[type=range]::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            height: 14px;
-            width: 14px;
-            background: var(--slate-900);
-            border: 2px solid white;
-            border-radius: 50%;
-            margin-top: -6px;
-        }
-        .neon-glow {
-            text-shadow: 0 0 10px rgba(20, 184, 166, 0.5);
-        }
+        .custom-scrollbar::-webkit-scrollbar { width: 0px; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .animate-fade { animation: fadeIn 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards; }
     </style>
     <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react/": "https://esm.sh/react@19.0.0/",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@^19.2.3",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+      }
+    }
+    </script>
 </head>
-<body class="antialiased bg-pattern">
+<body>
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
-<script type="module" src="/index.tsx"></script>
 </body>
 </html>
