--- a/google.ai/index.html
+++ b/google.ai/index.html
@@ -38,6 +38,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- Vite 将通过这行脚本接管整个应用 -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
