--- a/google.ai/index.html
+++ b/google.ai/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- Vite 将通过这行脚本接管整个应用 -->
+    <!-- 只需要这一行，Vite 就会处理所有的依赖加载 -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
