--- a/google.ai/index.html
+++ b/google.ai/index.html
@@ -38,7 +38,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- 只需要这一行，Vite 就会处理所有的依赖加载 -->
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
