--- a/google.ai/index.html
+++ b/google.ai/index.html
@@ -12,16 +12,14 @@
           font-family: 'Inter', sans-serif;
           background: #F8F9FA;
           -webkit-font-smoothing: antialiased;
-          -moz-osx-font-smoothing: grayscale;
         }
         .custom-scrollbar::-webkit-scrollbar { width: 4px; }
         .custom-scrollbar::-webkit-scrollbar-thumb { background: #E5E7EB; border-radius: 10px; }
         @keyframes fadeIn { 
-          from { opacity: 0; transform: translateY(15px) scale(0.98); } 
-          to { opacity: 1; transform: translateY(0) scale(1); } 
+          from { opacity: 0; transform: translateY(10px); } 
+          to { opacity: 1; transform: translateY(0); } 
         }
-        .animate-fade { animation: fadeIn 0.5s cubic-bezier(0.2, 0.8, 0.2, 1) forwards; }
-        ::selection { background-color: #000; color: #fff; }
+        .animate-fade { animation: fadeIn 0.4s ease-out forwards; }
     </style>
 <script type="importmap">
 {
