--- a/google.ai/index.html
+++ b/google.ai/index.html
@@ -1,38 +1,76 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Resonance Lab // 声影共鸣实验</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>声影共鸣 - 数字化视听实验海报</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700;900&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <script>
+      window.process = { env: { NODE_ENV: 'production' } };
+    </script>
     <style>
-        body { 
-          background: #F8F9FA;
-          margin: 0;
-          overflow: hidden;
+        :root {
+            --bg: #fdfdfd;
+            --slate-900: #0f172a;
         }
-        @keyframes fadeIn { 
-          from { opacity: 0; transform: translateY(10px); } 
-          to { opacity: 1; transform: translateY(0); } 
+        body {
+            font-family: 'Noto Sans SC', sans-serif;
+            background-color: var(--bg);
+            color: var(--slate-900);
+            scroll-behavior: smooth;
+            margin: 0;
         }
-        .animate-fade { animation: fadeIn 0.4s ease-out forwards; }
+        .font-mono {
+            font-family: 'JetBrains Mono', monospace;
+        }
+        .bg-pattern {
+            background-image: radial-gradient(circle at 1px 1px, #cbd5e1 0.8px, transparent 0);
+            background-size: 16px 16px;
+        }
+        .title-stroke {
+            -webkit-text-stroke: 1.2px #0f172a;
+            color: transparent;
+            paint-order: stroke fill;
+        }
+        input[type=range] {
+            -webkit-appearance: none;
+            background: transparent;
+            cursor: pointer;
+        }
+        input[type=range]::-webkit-slider-runnable-track {
+            height: 2px;
+            background: #cbd5e1;
+        }
+        input[type=range]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            height: 14px;
+            width: 14px;
+            background: var(--slate-900);
+            border: 2px solid white;
+            border-radius: 50%;
+            margin-top: -6px;
+        }
+        .neon-glow {
+            text-shadow: 0 0 10px rgba(20, 184, 166, 0.5);
+        }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "react": "https://esm.sh/react@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 </head>
-<body>
+<body class="antialiased bg-pattern">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
